replacing tables with ordered lists.

--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-07c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-07c.htm
@@ -12,67 +12,32 @@
 <P CLASS="Para">
 Now that we have our project we will create a folder. We will create
 our folder using the Navigator view's popup menu.</P>
-<TABLE BORDER="0" cellspacing="0" cellpadding="3">
-<THEAD>
-</THEAD>
-<TBODY>
-<TR>
-<TD valign="top" align="left">
+<ol>
+  <li>
 <P CLASS="Para">
-<b>
-1.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">Activate the Navigator view and select the project JaneQUser (the first project we
+Activate the Navigator view and select the project JaneQUser (the first project we
 created in the Navigator view). From
 the view's popup menu choose New &gt; Folder.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-2.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">
 In the New Folder wizard, your project name appears by default in the <i>Enter or select the folder
 </i>
 field. This is because we chose to create the new folder from your project's context menu.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-3.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">
 In the <i> Folder name</i> field, type a unique name for your new folder (e.g., using your first and last names in the title). Do not use spaces or special characters in the folder name (e.g., &quot;JanesFolder&quot;).</P>
 <P CLASS="Para">
 <img align="texttop" border="0" src="../images/Image14_new_folder_wizard.jpg" alt="New Folder Wizard" width="438" height="584"></P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-4.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">
 Click Finish when you are done. The Navigator view will update to show your
 newly created folder.</P>
-</TD>
-</TR>
-</TBODY>
-</TABLE>
-<P>&nbsp;<P><a href="qs-07d.htm">
+  </li>
+</ol>
+<P><a href="qs-07d.htm">
 <img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
 Using the New button</a>
 <P><a href="qs-07b.htm">
