--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-10b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-10b.htm
@@ -13,43 +13,19 @@ Closing an editor</h2>
 <P CLASS="Para">
 Now that we have a couple of editors open, it's probably a good time to learn
 how to close them.&nbsp;</P>
-<TABLE BORDER="0" cellspacing="0" cellpadding="3">
-<THEAD>
-</THEAD>
-<TBODY>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-1.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+<ol>
+  <li>
 <P CLASS="Para">
 Select the JanesFile.txt editor tab.&nbsp;</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<p CLASS="Para">
-<b>2.</b>
-</p>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <p CLASS="Para">
 In the text area add a 6th line of text:
 <blockquote>
   <p CLASS="Para">This is a 6th line</p>
 </blockquote>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<p CLASS="Para">
-<b>3.</b>
-</p>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">
 To close the editor, do one of the following options:</P>
 <ul>
@@ -61,35 +37,19 @@ To close the editor, do one of the following options:</P>
   </li>
   <li>
     <p CLASS="Para">
-    Chose File &gt; Close from the menubar.
+    Choose File &gt; Close from the menubar.
   </li>
 </ul>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>4.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">
 Note that you are prompted to save the file before the editor is closed.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>5.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">
 Click OK to save your changes and close the editor.</P>
-</TD>
-</TR>
-</TBODY>
-</TABLE>
+  </li>
+</ol>
 <P>If you closed the editor using File &gt; Close you may have noticed the
 option File &gt; Close All. This is a quick way to close all of your open
 editors. If you choose File &gt; Close All, you will be prompted to choose which
