--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-12b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-12b.htm
@@ -12,48 +12,30 @@
 Opening resources in the Navigator </h3>
 <P CLASS="Para">Using the Navigator there are several ways to open an
 editor.&nbsp;</P>
-<TABLE BORDER="0" cellspacing="0" cellpadding="3">
-<THEAD>
-</THEAD>
-<TBODY>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>1.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+<ol>
+  <li>
 <P CLASS="Para">In the Navigator select the file JanesFile.txt</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>2.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">
 To open an editor on the file choose one of the following approaches:</P>
 <ul>
   <li>
     To edit a resource using the default editor for that resource you
 can either double click on the resource (in the Navigator), or select the
-resource and choose Open from its popup menu.&nbsp;</p>
+resource and choose Open from its popup menu.&nbsp;<p>
   </li>
   <li>
     If you want to use a specific editor to edit the resource, start
 by selecting the resource in the Navigator, and choose the Open With option from
-the popup menu.</p>
+the popup menu.<p>
   </li>
 </ul>
 <p CLASS="Para">The Workbench remembers the last editor that you used for
 editing a specific file. This makes it easier to use the same editor down the
 road.</p>
-</TD>
-</TR>
-</TBODY>
-</TABLE>
+  </li>
+</ol>
 <P CLASS="Para">
 You can configure the default editors using&nbsp; Window &gt; Preferences &gt;
 Workbench &gt; File Associations.</P>
