--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-12c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-12c.htm
@@ -13,74 +13,32 @@ To</h3>
 <P CLASS="Para">
 The Navigator's Go To operation makes it easy to jump to a
 specific resource in the Navigator.&nbsp;</P>
-<TABLE BORDER="0" cellspacing="0" cellpadding="3" height="125">
-<THEAD>
-</THEAD>
-<TBODY>
-<TR>
-<TD height="21" valign="top" align="left">
-<P CLASS="Para">
-<b>
-1.</b>
-</P>
-</TD>
-<TD height="21" valign="top" align="left">
+<ol>
+  <li>
 <P CLASS="Para">
 Select the Navigator view. Its title bar will be highlighted (according to your 
 operating system's color scheme).</P>
-</TD>
-</TR>
-<TR>
-<TD height="21" valign="top" align="left">
-<P CLASS="Para">
-<b>
-2.</b>
-</P>
-</TD>
-<TD height="21" valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">
 Choose Go To &gt; Resource... from the popup.</P>
-</TD>
-</TR>
-<TR>
-<TD height="38" valign="top" align="left">
-<P CLASS="Para">
-<b>
-3.</b>
-</P>
-</TD>
-<TD height="38" valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">In the Goto Resource dialog type&nbsp; &quot;JanesF&quot; into
 the <i>Pattern </i>field at the top of the dialog.</P>
 <P CLASS="Para">As you type the filename the dialog filters the set of possible
 matches based on what you have entered so far.</P>
-</TD>
-</TR>
-<TR>
-<TD height="21" valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">
-<b>
-4.</b>
-</P>
-</TD>
-<TD height="21" valign="top" align="left">
-<P CLASS="Para">Select JanesFile.txt from the <i>Matching Resources</i>
+Select JanesFile.txt from the <i>Matching Resources</i>
 field and click OK. </P>
-</TD>
-</TR>
-<TR>
-<TD height="21" valign="top" align="left">
-<p CLASS="Para">
-<b>5.</b>
-</p>
-</TD>
-<TD height="21" valign="top" align="left">
+  </li>
+  <li>
 <p CLASS="Para">
 The Navigator will select the file JanesFile.txt.</p>
-</TD>
-</TR>
-</TBODY>
-</TABLE>
+  </li>
+</ol>
 <P align="center"><img align="texttop" border="0" src="../images/Image30_goto_resource.jpg" alt="Goto Resource popup" width="296" height="426">
 </P>
 
