--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-12d.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-12d.htm
@@ -13,74 +13,33 @@
 The Navigator shows all of the resources in your Workbench. You can pick a
 project or folder, &quot;Go Into it&quot; and hide all other resources. Let's
 try this with our JaneQUser project.</P>
-<TABLE BORDER="0" cellspacing="0" cellpadding="3" height="125">
-<THEAD>
-</THEAD>
-<TBODY>
-<TR>
-<TD height="21" valign="top" align="left">
-<P CLASS="Para">
-<b>
-1.</b>
-</P>
-</TD>
-<TD height="21" valign="top" align="left">
+<ol>
+  <li>
 <P CLASS="Para">
 Select the Navigator view. Its title bar will be highlighted (according to your 
 operating system's color scheme).</P>
-</TD>
-</TR>
-<TR>
-<TD height="21" valign="top" align="left">
-<p CLASS="Para">
-<b>2.</b>
-</p>
-</TD>
-<TD height="21" valign="top" align="left">
+  </li>
+  <li>
 <p CLASS="Para">
 Select the JaneQUser project.</p>
-</TD>
-</TR>
-<TR>
-<TD height="21" valign="top" align="left">
-<P CLASS="Para">
-<b>3.</b>
-</P>
-</TD>
-<TD height="21" valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">
 Choose Go Into from the popup menu.</P>
-</TD>
-</TR>
-<TR>
-<TD height="38" valign="top" align="left">
-<P CLASS="Para">
-<b>4.</b>
-</P>
-</TD>
-<TD height="38" valign="top" align="left">
+  </li>
+  <li>
 <p CLASS="Para">The Navigator now shows only the contents of JaneQUserProject.
 The title of the Navigator shows the name of the resource you are currently
 looking at.</p>
-<p CLASS="Para"><img align="texttop" border="0" src="../images/Image31_go_into.jpg" alt="Navigator view" width="231" height="205">
-</TD>
-</TR>
-<TR>
-<TD height="21" valign="top" align="left">
-<P CLASS="Para">
-<b>5.</b>
-</P>
-</TD>
-<TD height="21" valign="top" align="left">
+<p CLASS="Para"><img align="texttop" border="0" src="../images/Image31_go_into.jpg" alt="Navigator view" width="231" height="205"></li>
+  <li>
 <P CLASS="Para">You can use the back, forward and up buttons <img align="texttop" border="0" src="../images/Image33_into_buttons.jpg" alt="into buttons" width="74" height="21">
 to move between showing all resources and showing&nbsp; only the JaneQUser
 project. </P>
 <P CLASS="Para">Click the back button to show all of the
 resources.&nbsp; </P>
-</TD>
-</TR>
-</TBODY>
-</TABLE>
+  </li>
+</ol>
 
 
 <P><a href="qs-13.htm">
