--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-13.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-13.htm
@@ -13,50 +13,20 @@ Show me the files </h2>
 <p CLASS="Para">Right about now you're probably asking yourself &quot;Where are
 my files stored?&quot;. Perhaps you are even a little concerned they are stored
 in some mystical repository.&nbsp; Answering this question is easy.</p>
-<TABLE BORDER="0" cellspacing="0" cellpadding="3">
-<THEAD>
-</THEAD>
-<TBODY>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-1.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
-Start by opening your operating system's file system explorer.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-2.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
-Navigate to the location of where you installed the Workbench. You should see a
-subdirectory called &quot;workspace&quot;.&nbsp;</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-3.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">If you look in the workspace subdirectory you will see the
-projects, folders and files that we created. </P>
-</TD>
-</TR>
-</TBODY>
-</TABLE>
-<p CLASS="Para">Bottom line, all of your resources are stored as normal files
+<ol>
+  <li>
+<p CLASS="Para">Start by opening your operating system's file system explorer.</p>
+  </li>
+  <li>
+<p CLASS="Para">Navigate to the location of where you installed the Workbench. You should see a
+subdirectory called &quot;workspace&quot;.&nbsp;</p>
+  </li>
+  <li>
+<p CLASS="Para">If you look in the workspace subdirectory you will see the
+projects, folders and files that we created. </p>
+  </li>
+</ol>
+<p CLASS="Para">All of your resources are stored as normal files
 and folders on your machine. This allows you to use other tools for working with
 your files. Those tools can be completely oblivious to the Workbench. In a later
 section we will look at how to work with external editors that are not
