--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-24c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-24c.htm
@@ -12,48 +12,22 @@
  Export wizard</h3>
 <P CLASS="Para">
 You can use the export wizard to export from the Workbench to the file system.</P>
-<TABLE BORDER="0" cellspacing="0" cellpadding="3">
-<THEAD>
-</THEAD>
-<TBODY>
-<TR>
-<TD valign="top" align="left">
-<b>1.</b>
-</TD>
-<TD valign="top" align="left">
-Select the project JaneQUser in the Navigator
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
+<ol>
+  <li>
 <P CLASS="Para">
-<b>2.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+Select the project JaneQUser in the Navigator. </P>
+  </li>
+  <li>
 <P CLASS="Para">
 From the menubar, select File &gt; Export.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>3.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">
 In the export wizard, select File System, then click Next.</P>
 <P CLASS="Para">
-<img align="texttop" border="0" src="../images/Image42_export.jpg" alt="Export Wizard" ></P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para"><b>4.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+<img align="texttop" border="0" src="../images/Image42_export.jpg" alt="Export Wizard" width="469" height="548" ></P>
+  </li>
+  <li>
 <p class="Para">Expand JaneQUser project, and click on JanesFolder. In the right
 pane ensure that only JanesINIFile.ini is checked.&nbsp; Notice the folder and
 project in the left pane now have a grayed checkbox indicating that some, but
@@ -64,32 +38,17 @@ resources you want to export.</p>
 JanesINIFile.ini we could have simply selected it in the Navigator and chosen
 File &gt; Export. The export wizard would have automatically ensured it was the
 only file checked for export.</p>
-<p class="Para"><img align="texttop" border="0" src="../images/Image43_export_tree.jpg" alt="Export Wizard" ></p>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-5.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+<p class="Para">
+<img align="texttop" border="0" src="../images/Image43_export_tree.jpg" alt="Export Wizard" width="559" height="578" ></p>
+  </li>
+  <li>
 <P CLASS="Para">
 In the <i> Directory</i> field, type or browse to select a location in the file system where you want the exported resources to reside.</P>
 <P CLASS="Para">
 If you enter the name of a directory that does not exist the export wizard will
 offer to create it for you once you press Finish.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-6.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">
 In the Options area, you can choose to:			 </P>
 <UL CLASS="UnorderedList">
@@ -98,26 +57,16 @@ Overwrite existing resources without warning </LI>
 <LI CLASS="Item">
 Create directory structure for files or Create only selected directories</LI>
 </UL>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-7.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">
 Click Finish when you are done.</P>
-</TD>
-</TR>
-</TBODY>
-</TABLE>
-<P>&nbsp;<P><a href="qs-31a.htm">
-<img border="0" src="../images/ngnext.gif" alt="Next topic" > 
+  </li>
+</ol>
+<P><a href="qs-31a.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12" > 
 Importing files</a><P><a href="qs-24b.htm">
-<img border="0" src="../images/ngback.gif" alt="Back to previous topic" > 
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12" > 
 Drag and drop or copy and paste</a><br>
 <P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14" ></a>
 
