--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-31b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-31b.htm
@@ -13,35 +13,15 @@ Drag and drop or copy and paste</h3>
 <P CLASS="Para">
 <img align="texttop" border="0" src="../images/win_only.gif" alt="Windows only" width="51" height="13"> You can use your operating system's file system
 browser to copy folders and files from the file system into the Workbench.</P>
-<DIV CLASS="Note">
 <P CLASS="Para">
 Note:	You must drag the resource(s) to the exact location in the Navigator view hierarchy where you want the
 resources to reside; you cannot simply drag and drop them onto a blank area in the Navigator view.</P>
-</DIV>
-<TABLE BORDER="0" cellspacing="0" cellpadding="3">
-<THEAD>
-</THEAD>
-<TBODY>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-1.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+<ol>
+  <li>
 <P CLASS="Para">
 Open your operating system's file system explorer.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-2.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">
 Locate the file JanesFile.txt that we recently exported and drag it to a specific location in the Navigator view in the Workbench.&nbsp;&nbsp;</P>
 <P CLASS="Para">When dragging resources into the Navigator, the project/folder that you are trying to
@@ -54,33 +34,17 @@ drop the resource into will be selected.</P>
 </blockquote>
 <P CLASS="Para">
 Drag the file over JaneQUser2 and release the mouse button.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-3.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">
 Notice that the file is copied into the Workbench and placed into JaneQUser2.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<b>4.</b>
-</TD>
-<TD valign="top" align="left">
-This can also be achieved by copying the file in the system's file explorer,
+  </li>
+  <li>This can also be achieved by copying the file in the system's file explorer,
 then selecting the destination in the Navigator and&nbsp;
 <p>choosing Edit &gt; Paste.
-</TD>
-</TR>
-</TBODY>
-</TABLE>
-<P>&nbsp;<P><a href="qs-31c.htm">
+  </li>
+</ol>
+<P><a href="qs-31c.htm">
 <img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
 Import wizard</a><P><a href="qs-31a.htm">
 <img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
