--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-31c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-31c.htm
@@ -12,52 +12,22 @@
 Import wizard</h3>
 <P CLASS="Para">
 You can use the Import wizard to copy resources into the Workbench.</P>
-<TABLE BORDER="0" cellspacing="0" cellpadding="3">
-<THEAD>
-</THEAD>
-<TBODY>
-<TR>
-<TD valign="top" align="left">
+<ol>
+  <li>
 <p CLASS="Para">
-<b>1.</b>
-</p>
-</TD>
-<TD valign="top" align="left">
-<p CLASS="Para">
-Select the project JaneQuser</p>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
+Select the project JaneQuser.</p>
+  </li>
+  <li>
 <P CLASS="Para">
-<b>2.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
-Select File &gt; Import...</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>3.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+Select File &gt; Import.</P>
+  </li>
+  <li>
 <P CLASS="Para">
 In the Import wizard, select File System, then click Next.</P>
 <P CLASS="Para">
 <img align="texttop" border="0" src="../images/Image38_import.jpg" alt="Import Wizard" width="469" height="549"></P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>4.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">
 In the <i> Directory </i> field, type or browse to select the directory
 containing the file JanesINIFile.ini that we recently exported.&nbsp;</P>
@@ -66,15 +36,8 @@ field's combo box.</P>
 <blockquote>
   <P CLASS="Para">&nbsp;<img align="texttop" border="0" src="../images/Image41_import_combo.jpg" alt="Import Wizard" width="525" height="44"></P>
 </blockquote>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>5.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">In the right pane check the file JanesINIFile.ini&nbsp;&nbsp;</P>
 <P CLASS="Para"> Checking a folder in the left pane will import its entire contents into
 the Workbench. A grayed checkbox (as shown below) indicates that only some of the
@@ -82,28 +45,13 @@ files in the folder will be imported into the Workbench.</P>
 <P CLASS="Para">You can use the Select Types... button to filter the types of
 files you want to import.</P>
 <P CLASS="Para"><img align="texttop" border="0" src="../images/Image39_import_tree.jpg" alt="Import Wizard" width="528" height="593"></P>
-<P CLASS="Para">&nbsp;</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>6.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">
 The <i>Where do you want the imported resources to go</i> field should already
 be filled in with the name of the project (JaneQUser).&nbsp; </P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<p CLASS="Para">
-<b>7.</b>
-</p>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">You can change the destination project or folder by clicking
 Browse....&nbsp; </P>
 <P CLASS="Para">Click the Browse button and choose our second project
@@ -111,19 +59,11 @@ JaneQUser2.&nbsp; </P>
 <blockquote>
   <blockquote>
 <P CLASS="Para">
-<img align="texttop" border="0" src="../images/Image40_import_target.jpg" alt="Import Wizard" width="350" height="463"> </P>
+<img align="texttop" border="0" src="../images/Image40_import_target.jpg" alt="Import Wizard" width="350" height="463"></P>
   </blockquote>
 </blockquote>
-<p>&nbsp;
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>8.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">
 In the Options area, you can choose to:			 </P>
 <UL CLASS="UnorderedList">
@@ -132,23 +72,14 @@ Overwrite existing resources without warning </LI>
 <LI CLASS="Item">
 Create complete folder structure or Create selected folders only</LI>
 </UL>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>9.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">
 Click Finish when you are done. The file JaneINIFile.ini is now shown in the
 Navigator in the project JaneQUser2.</P>
-</TD>
-</TR>
-</TBODY>
-</TABLE>
-<P>&nbsp;<P><a href="qs-32.htm">
+  </li>
+</ol>
+<P><a href="qs-32.htm">
 <img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
 Deleting resources</a><P><a href="qs-31b.htm">
 <img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
