--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-32.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-32.htm
@@ -12,51 +12,26 @@
 Deleting resources</h2>
 <P CLASS="Para">Now that we have imported a few files into our second
 project (JaneQUser2) we will now see how easy it is to delete the project.&nbsp;</P>
-<TABLE BORDER="0" cellspacing="0" cellpadding="3">
-<THEAD>
-</THEAD>
-<TBODY>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-1.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
-Select project JaneQUser2 in the Navigator view.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>2.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+<ol>
+  <li>
+<P CLASS="Para">Select project JaneQUser2 in the Navigator view.</P>
+  </li>
+  <li>
 <P CLASS="Para">
 To delete the project do one of the following:</P>
 <ul>
   <li>
-    from the project's popup menu choose Delete</p>
+    from the project's popup menu choose Delete<p>
   </li>
   <li>
-    press the DEL key</p>
+    press the DEL key<p>
   </li>
   <li>
-    choose Edit &gt; Delete from the pull down menu</p>
+    choose Edit &gt; Delete from the pull down menu<p>
   </li>
 </ul>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>3.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">
 You&nbsp; will be asked to confirm the deletion and also choose the type of
 deletion you want to perform.</P>
@@ -72,10 +47,8 @@ You can:</P>
   </li>
 </ul>
 <p CLASS="Para">Just accept the default (Do not delete contents) and press Yes.</p>
-</TD>
-</TR>
-</TBODY>
-</TABLE>
+  </li>
+</ol>
 <P> The same steps
 work for any resource shown in the Navigator.
 </P>
