--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-34b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-34b.htm
@@ -17,29 +17,11 @@ registered for the particular file type. If an editor is located, the Workbench
 will automatically launch that editor. This type of editor is referred to as an
 external editor because it does not show up as an editor tab in the
 Workbench.&nbsp;&nbsp;</P>
-<TABLE BORDER="0" cellspacing="0" cellpadding="3">
-<THEAD>
-</THEAD>
-<TBODY>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-1</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<p CLASS="Para">Select the file JanesINIFile.ini
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-2.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+<ol>
+  <li>
+<p CLASS="Para">Select the file JanesINIFile.ini.
+  </li>
+  <li>
 <P CLASS="Para">
 Double-click the file in the Navigator view to launch the external editor.</P>
 <P CLASS="Para">
@@ -50,15 +32,13 @@ import another file (see previous sections) that is associated with a third
 party editor. Double click again on this new file and you should see your
 favorite editor open in its own window.</P>
 <P CLASS="Para"><img align="texttop" border="0" src="../images/win_only.gif" alt="Windows only" width="49" height="13"><br>
-If you discovered that your favorite editor magically opens up inside the
-Workbench don't panic. The Workbench supports OLE document editors, and your
-editor happens to provide OLE document support allowing it to be opened in its own
-window, or embedded inside another window like the Workbench. We'll discuss this
-in more detail in the next section.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</P>
-</TD>
-</TR>
-</TBODY>
-</TABLE>
+If you discovered that your favorite editor magically opens up inside the 
+Workbench don't panic. The Workbench supports OLE document editors, and your 
+editor happens to provide OLE document support allowing it to be opened in its 
+own window, or embedded inside another window like the Workbench. We'll discuss 
+this in more detail in the next section.</P>
+  </li>
+</ol>
 
 
 <P><a href="qs-34c.htm">
