--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-34c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-34c.htm
@@ -11,78 +11,33 @@
 <h3>
 Embedded editors</h3>
 <P CLASS="Para">
-<img align="texttop" border="0" src="../images/win_only.gif" alt="Windows only" width="49" height="13">&nbsp;<br>
-The Workbench supports OLE document editors.</P>
-<TABLE BORDER="0" cellspacing="0" cellpadding="3">
-<THEAD>
-</THEAD>
-<TBODY>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-1.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+<img align="texttop" border="0" src="../images/win_only.gif" alt="Windows only" width="49" height="13">&nbsp;The Workbench supports OLE document editors.</P>
+<ol>
+  <li>
 <P CLASS="Para">
 Select JanesFolder in the navigator.&nbsp;</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<b>2.</b>
-</TD>
-<TD valign="top" align="left">
-Create the file JanesWordDoc.doc.
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>3.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>Create the file JanesWordDoc.doc. </li>
+  <li>
 <P CLASS="Para">Notice how the Workbench automatically opens the OLE document
 editor in place and integrates its pull-down menu options into the menubar.
 There should also be an editor tab for JanesWordDoc.doc.&nbsp;</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>4.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">
 Make a change to the file.</P>
-</TD>
-</TR>
-<tr>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>5.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">
 Close the editor by clicking the X on the editor tab; when prompted, save its
 contents.</P>
-</TD>
-</tr>
-<TR>
-<TD valign="top" align="left">
-<p CLASS="Para"><b>6.</b>
-</TD>
-<TD valign="top" align="left">
-<p CLASS="Para">Reopen the file by
-double-clicking it in the Navigator view.
-</TD>
-</TR>
-</TBODY>
-</TABLE>
+  </li>
+  <li>
+<P CLASS="Para">
+Reopen the file by
+double-clicking it in the Navigator view.</P>
+  </li>
+</ol>
 
 
 <P><a href="qs-34d.htm">
