--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-34d.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-34d.htm
@@ -14,108 +14,48 @@ Editing files outside the Workbench</h3>
 In a previous section we launched an external editor on the file
 JanesINIFile.ini by double clicking on it in the Navigator. We can also use the
 same external editor by launching it outside of the Workbench.&nbsp;</P>
-<TABLE BORDER="0" cellspacing="0" cellpadding="3">
-<THEAD>
-</THEAD>
-<TBODY>
-<TR>
-<TD valign="top" align="left">
+<ol>
+  <li>
 <P CLASS="Para">
-<b>
-1.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+Close any editors that are open on JanesINIFile.ini.</P>
+  </li>
+  <li>
 <P CLASS="Para">
-Close any editors that are open on JanesINIFile.ini.&nbsp;</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<p CLASS="Para">
-<b>2.</b>
-</p>
-</TD>
-<TD valign="top" align="left">
-<p CLASS="Para">
 In your file system explorer, navigate to the directory where you installed the
-Workbench and go into the workspace subdirectory.</p>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<p CLASS="Para">
-<b>3.</b>
-</p>
-</TD>
-<TD valign="top" align="left">
-<p CLASS="Para">
-Edit the file JanesINIFile.ini and save it . Do not use the Workbench's
-Navigator to open the editor.</p>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
+Workbench and go into the workspace subdirectory.</P>
+  </li>
+  <li>
 <P CLASS="Para">
-<b>4.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+Edit the file JanesINIFile.ini and save it . Do not use the Workbench's
+Navigator to open the editor.</P>
+  </li>
+  <li>
 <P CLASS="Para">
 Return to the Workbench and in the Navigator view, select the project JaneQUser.&nbsp;</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<p CLASS="Para">
-<b>5.</b>
-</p>
-</TD>
-<TD valign="top" align="left">
-<p CLASS="Para">
+  </li>
+  <li>
+<P CLASS="Para">
 Choose Refresh from the project's context menu. This instructs the
 Workbench to look for any changes to the project that have been made in the
-local file system by external tools.</p>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
+local file system by external tools.</P>
+  </li>
+  <li>
 <P CLASS="Para">
-<b>6.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
-Select the file JanesINIFile.ini .</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<p CLASS="Para">
-<b>7.</b>
-</p>
-</TD>
-<TD valign="top" align="left">
+Select the file JanesINIFile.ini.</P>
+  </li>
+  <li>
 <p CLASS="Para">
 For a little variety choose Open With &gt; Text Editor from the file's
 popup menu.</p>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para"><b>8.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">
 Observe that the Workbench's own default text editor is opened.&nbsp;</P>
 <P CLASS="Para">
 In the default text editor verify the changes you made externally are reflected in the
 Workbench.</P>
-</TD>
-</TR>
-</TBODY>
-</TABLE>
+  </li>
+</ol>
 <P>As we've seen the Workbench stores all of its resources in the local file
 system. This means you can use your system file explorer to copy files from the
 Workbench's workspace area even when the Workbench is not running. You can also
