--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-35b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-35b.htm
@@ -13,67 +13,27 @@ Copying</h3>
 <p CLASS="Head">
 Let's start by copying JanesFile.txt to our new&nbsp; folder (JanesOtherFolder).
 Once we have copied our file we will then rename it.</p>
-<TABLE BORDER="0" cellspacing="0" cellpadding="3">
-<THEAD>
-</THEAD>
-<TBODY>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-1.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">Ensure that you have performed the setup described in the
-introduction to this <a href="qs-35.htm#setup">section</a>.&nbsp;</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<p CLASS="Para"><b>2.</b></p>
-</TD>
-<TD valign="top" align="left">
+<ol>
+  <li>
+<p CLASS="Head">
+Ensure that you have performed the setup described in the
+introduction to this <a href="qs-35.htm#setup">section</a>.&nbsp;</p>
+  </li>
+  <li>
 <p CLASS="Para">
-In the Navigator view, select JanesFile.txt</p>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>3.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+In the Navigator view, select JanesFile.txt.</p>
+  </li>
+  <li>
 <P CLASS="Para">
 From the file's context menu, select Copy (or Ctrl+C)</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>4.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P>
-In the Navigator view, select JanesOtherFolder as the destination.</P>
-</TD>
-</TR>
-<tr>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>5.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P>
-From the folder's context menu, select Paste (or Ctrl+V)</P>
-</TD>
-</tr>
-</TBODY>
-</TABLE>
-<P>&nbsp;We have seen how to copy files using the copy operation. It is also
+  </li>
+  <li>In the Navigator view, select JanesOtherFolder as the destination.</li>
+  <li>
+<p CLASS="Head">
+From the folder's context menu, select Paste (or Ctrl+V).</p>
+  </li>
+</ol>
+<P>We have seen how to copy files using the copy operation. It is also
 possible to copy files by holding down the Ctrl key while dragging a file from one folder to another folder.
 </P>
 
