--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-35c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-35c.htm
@@ -12,41 +12,15 @@
 Renaming</h3>
 <p CLASS="Head">Now that we have copied JanesFile.txt from JanesFolder to
 JanesOtherFolder we are ready to rename something.&nbsp;</p>
-<TABLE BORDER="0" cellspacing="0" cellpadding="3">
-<THEAD>
-</THEAD>
-<TBODY>
-<TR>
-<TD valign="top" align="left">
-<p CLASS="Para">
-<b>1.</b>
-</p>
-</TD>
-<TD valign="top" align="left">
-<p CLASS="Para">
-In the Navigator view, select JanesFile.txt in JanesOtherFolder.</p>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-2.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+<ol>
+  <li>
+<p CLASS="Head">In the Navigator view, select JanesFile.txt in JanesOtherFolder.</p>
+  </li>
+  <li>
 <P CLASS="Para">
 From the file's context menu, select Rename.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-3.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <p CLASS="Para">The Navigator overlays the file's name with a text field.&nbsp;&nbsp;Type in JanesText.txt and press Enter.</p>
 <DIV CLASS="Note">
 <P CLASS="Para">
@@ -58,67 +32,27 @@ From the file's context menu, select Rename.</P>
 <P CLASS="Para">If you decide you do not want to rename a resource, you can press
 escape to dismiss the text field.</P>
 </DIV>
-</TD>
-</TR>
-</TBODY>
-</TABLE>
+  </li>
+</ol>
 <P>You are probably wondering whether or not copy and rename work on anything
 besides files.
 To answer this question we can try renaming a folder.&nbsp;
 </P>
 
 
-<TABLE BORDER="0" cellspacing="0" cellpadding="3">
-<TBODY>
-<TR>
-<TD valign="top" align="left">
+<ol>
+  <li>
 <P CLASS="Para">
-<b>
-1.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
-In the Navigator view, select the folder JanesOtherFolder</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<p CLASS="Para"><b>2.</b></p>
-</TD>
-<TD valign="top" align="left">
+In the Navigator view, select the folder JanesOtherFolder.</P>
+  </li>
+  <li>
 <p CLASS="Para">
 From the folder's context menu choose Rename.</p>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-3.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
-Once again the Navigator overlays the folder name with an entry field&nbsp; to allow
-you to type in the new name. Change the folder name to be JanesSecondFolder.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<p CLASS="Para">
-<b>4.</b>
-</p>
-</TD>
-<TD valign="top" align="left">
-<p CLASS="Para">
-Rename the folder back to its original name (JanesOtherFolder).</p>
-</TD>
-</TR>
-</TBODY>
-</TABLE>
-<P>&nbsp;
-</P>
+  </li>
+  <li>Once again the Navigator overlays the folder name with an entry field&nbsp; to allow
+you to type in the new name. Change the folder name to be JanesSecondFolder.</li>
+  <li>Rename the folder back to its original name (JanesOtherFolder).</li>
+</ol>
 
 
 <P><a href="qs-35d.htm">
