--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-35d.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-35d.htm
@@ -13,61 +13,25 @@ Moving</h3>
 <p CLASS="Head">We have copied and renamed several of our resources. Now it's
 time to move some resources around. We will move our JanesOtherFolder and
 its file to be a subfolder of our original folder JanesFolder.</p>
-<TABLE BORDER="0" cellspacing="0" cellpadding="3">
-<THEAD>
-</THEAD>
-<TBODY>
-<TR>
-<TD valign="top" align="left">
-<b>1.</b>
-</TD>
-<TD valign="top" align="left">
-In the Navigator view, select JanesOtherFolder
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-2.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+<ol>
+  <li>In the Navigator view, select JanesOtherFolder. </li>
+  <li>
 <P CLASS="Para">
 From the file's context menu, select Move.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-3.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <p CLASS="Para">In the Folder Selection dialog choose JanesFolder and click OK.</p>
 <blockquote>
 <p CLASS="Para"><img align="texttop" border="0" src="../images/Image48_move.jpg" alt="Folder dialog" width="350" height="464"></p>
 </blockquote>
-<DIV CLASS="Note">
-
-</DIV>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<b>4.</b>
-</TD>
-<TD valign="top" align="left">
-In the Navigator JanesFolder now contains JanesOtherFolder. Expand
+  </li>
+  <li>In the Navigator JanesFolder now contains JanesOtherFolder. Expand
 JanesOtherFolder and confirm that it contains JanesText.txt.
 <blockquote>
   <p><img align="texttop" border="0" src="../images/Image48_rename_done.jpg" alt="Navigator view" width="230" height="205"></p>
 </blockquote>
-</TD>
-</TR>
-</TBODY>
-</TABLE>
+  </li>
+</ol>
 
 
 <P>We have seen how to move files using the move operation. It is also
