--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-2d.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-2d.htm
@@ -11,65 +11,20 @@
 <h3>Unassociated
 tasks</h3>
 <P CLASS="Para">
-Unassociated tasks are not associated with any specific resource. Create an
-unassociated task as follows. </P>
-<DIV CLASS="Subtopic">
-
-<DIV CLASS="Subtopic">
-
-<TABLE BORDER="0" cellspacing="0" cellpadding="3">
-<THEAD>
-</THEAD>
-<TBODY>
-<TR>
-<TD valign="top" align="left">
+Unassociated tasks are not associated with any specific resource. To create an 
+unassociated task: </P>
+<ol>
+  <li>
 <P CLASS="Para">
-<b>
-1.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
-In the Tasks view, click the New Task button <img align="texttop" border="0" src="../images/Image52_new_task.jpg" alt="New task button" width="23" height="20">.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-2.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
+In the Tasks view, click the New Task button <img align="texttop" border="0" src="../images/Image52_new_task.jpg" alt="New task button" width="23" height="20">.
 A new task dialog appears. </P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>3.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">
 Type a brief description for the task and press Enter. If you change your mind
-while entering the description you can press Escape to cancel the dialog.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<p CLASS="Para"><b>4.</b>
-</TD>
-<TD valign="top" align="left">
-<p CLASS="Para">The new task appears in the Tasks view.</p>
-<p CLASS="Para"><img align="texttop" border="0" src="../images/Image53_newtask.jpg" alt="Tasks view" width="477" height="149">
-</TD>
-</TR>
-</TBODY>
-</TABLE>
-</DIV>
-</DIV>
+while entering the description you can press Escape to cancel the dialog. The new task appears in the Tasks view.</P>
+<p CLASS="Para"><img align="texttop" border="0" src="../images/Image53_newtask.jpg" alt="Tasks view" width="477" height="149"></li>
+</ol>
 
 
 <P><a href="qs-37-2d2.htm">
