--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-3c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-3c.htm
@@ -13,61 +13,26 @@
 <p CLASS="Head">The Workbench allows you to bookmark individual files or
 locations within a file. In this section we will set several bookmarks and
 view them using the Bookmarks view.</p>
-<TABLE BORDER="0" cellspacing="0" cellpadding="3">
-<THEAD>
-</THEAD>
-<TBODY>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-1.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
-From the menubar, select Window &gt; Show View &gt; Bookmarks. The
-Bookmarks view appears in the Workbench.&nbsp;</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-2.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+<ol>
+  <li>
+<p CLASS="Head">From the menubar, select Window &gt; Show View &gt; Bookmarks. The
+Bookmarks view appears in the Workbench.&nbsp;</p>
+  </li>
+  <li>
 <P CLASS="Para">
 Edit the file JanesFile.txt</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-3.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">
 Position your cursor over the editor's marker bar next to any line in the file. Then, from the context menu on the marker bar, select Add Bookmark.</P>
 <blockquote>
 <P CLASS="Para">
 <img align="texttop" border="0" src="../images/Image54_bookmark_menu.jpg" alt="Bookmark Menu" width="304" height="134"></P>
 </blockquote>
-<P CLASS="Para">When the Add Bookmark dialog opens type in a description for this bookmark. Type in
-&quot;My Bookmark&quot;.&nbsp;&nbsp;</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-4.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+<P CLASS="Para">When the Add Bookmark dialog opens type in a description for 
+this bookmark. Type in &quot;My Bookmark&quot;.</P>
+  </li>
+  <li>
 <P CLASS="Para">
 Notice that a new bookmark appears in the marker bar.</P>
 <blockquote>
@@ -80,16 +45,8 @@ The new bookmark also appears in the Bookmarks view.</P>
 <P CLASS="Para">
 <img align="texttop" border="0" src="../images/Image54_bookmark_added2.jpg" alt="Bookmark view" width="204" height="202"></P>
 </blockquote>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-5.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">
 In the Navigator view select the file JanesText.txt. From the file's popup menu
 choose Add Bookmark</P>
@@ -100,12 +57,8 @@ bookmarks.</P>
 <P CLASS="Para">
 <img align="texttop" border="0" src="../images/Image54_bookmark_two.jpg" alt="Bookmark view" width="203" height="201"></P>
 </blockquote>
-<P CLASS="Para">
-&nbsp;</P>
-</TD>
-</TR>
-</TBODY>
-</TABLE>
+  </li>
+</ol>
 
 
 <P><a href="qs-37-3e.htm">
