--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-3f.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-3f.htm
@@ -12,15 +12,8 @@
 Removing bookmarks</h3>
 <p CLASS="Head">In this section we will learn how to remove the bookmarks we
 have created.</p>
-<TABLE BORDER="0" cellspacing="0" cellpadding="3">
-<THEAD>
-</THEAD>
-<TBODY>
-<TR>
-<TD valign="top" align="left">
-<p CLASS="Para"><b>1.</b>
-</TD>
-<TD valign="top" align="left">
+<ol>
+  <li>
 <P CLASS="Para">
 In the Bookmarks view, select JanesFile.txt (the second bookmark we created) and do one of the following:</P>
 <ul>
@@ -29,91 +22,41 @@ In the Bookmarks view, select JanesFile.txt (the second bookmark we created) and
     on the view's toolbar.
   </li>
   <li>
-    From the bookmark's context menu choose delete.</p>
-  </li>
+    From the bookmark's context menu choose delete.</li>
 </ul>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>2.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
 <P CLASS="Para">
 Notice that the bookmark is removed from the Bookmarks view.</P>
 <blockquote>
 <P CLASS="Para">
 <img align="texttop" border="0" src="../images/Image54_bookmark_oneleft.jpg" alt="Bookmark view" width="204" height="200"></P>
 </blockquote>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<p CLASS="Para">
-<b>3.</b>
-</p>
-</TD>
-<TD valign="top" align="left">
-<P>We should have one remaining bookmark. This bookmark is associated with a line in the file JanesFile.txt. There are two
-other approaches to removing this bookmark.
-</P>
-
-
-<ol>
-  <li>Use Remove Bookmark in the marker bar of the JanesFile.txt editor. You may
-    recall that we used Add Bookmark in the marker bar when we first created the
-    bookmark.<br>
+  </li>
+  <li>We should have one remaining bookmark. This bookmark is associated with a 
+  line in the file JanesFile.txt. There are two other approaches to removing 
+  this bookmark. 
+  <ul>
+  <li>Use Remove Bookmark in the marker bar of the JanesFile.txt editor. You may 
+  recall that we used Add Bookmark in the marker bar when we first created the 
+  bookmark.<br>
     <img align="texttop" border="0" src="../images/Image54_bookmark_remove2.jpg" alt="Bookmark menu" width="308" height="145"></li>
   <li>Delete the bookmark (as we did above) by using Delete from the bookmark's
     popup menu in the Bookmarks view.</li>
-</ol>
+  </ul>
 <p>Let's go with the second approach.&nbsp;</p>
-</TD>
-</TR>
-</TBODY>
-</TABLE>
-<TABLE BORDER="0" cellspacing="0" cellpadding="3">
-<THEAD>
-</THEAD>
-<TBODY>
-<TR>
-<TD valign="top" align="left">
-<p CLASS="Para"><b>4.</b>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">Ensure there is an editor open on JanesFile.txt.&nbsp;</P>
 <P CLASS="Para">Although we don't actually need to open the editor, doing so
 will allow us to watch the editor update as we delete the bookmark.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<p CLASS="Para">
-<b>5.</b>
-</p>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">In the Bookmarks view, select JanesFile.txt (the remaining
+  </li>
+  <li>
+<p CLASS="Head">In the Bookmarks view, select JanesFile.txt (the remaining
 bookmark). Click the&nbsp; Delete&nbsp; button <img align="texttop" border="0" src="../images/Image54_bookmark_del1.jpg" alt="Bookmark delete button" width="19" height="19">
-    on the view's toolbar.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>6.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
+    on the view's toolbar.
 Notice that the bookmark is removed from the Bookmarks view and the
-JanesFile.txt editor.&nbsp; </P>
-</TD>
-</TR>
-</TBODY>
-</TABLE>
+JanesFile.txt editor.&nbsp; </p>
+  </li>
+</ol>
 
 
 <P><a href="qs-39.htm">
