--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39.htm
@@ -15,45 +15,24 @@ section we will learn how to rearrange these views and editors to customize the 
 <P CLASS="Para"><b>Setup</b></P>
 <P CLASS="Para">Before we start rearranging our Workbench, we need to do a
 little house keeping.</P>
-<TABLE BORDER="0" cellspacing="0" cellpadding="3">
-<THEAD>
-</THEAD>
-<TBODY>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-1.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
-Start by choosing Window &gt; Reset Perspective and selecting OK. This will reset the
+<ol>
+  <li>
+<P CLASS="Para">Start by choosing Window &gt; Reset Perspective and selecting OK. This will reset the
 current perspective to its original views and layout.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-2.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">
 Ensure there are editors open for JanesFile.txt and JanesText.txt. Close any
 other open editors including the Welcome Page if it is still open. Don't worry.
 You can always get back to the welcome page by choosing Help &gt; Welcome... and
 selecting Eclipse Platform.</P>
-</TD>
-</TR>
-</TBODY>
-</TABLE>
-<P>&nbsp;Your Workbench should now look like this:&nbsp;&nbsp;&nbsp;
+  </li>
+</ol>
+<P>Your Workbench should now look like this:&nbsp;&nbsp;&nbsp;
 </P>
 
 
-<P>&nbsp;<img align="texttop" border="0" src="../images/Image55_reset.jpg" alt="Workbench after reset">
+<P>&nbsp;<img align="texttop" border="0" src="../images/Image55_reset.jpg" alt="Workbench after reset" width="643" height="502">
 </P>
 
 
