--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39e.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39e.htm
@@ -14,91 +14,35 @@ Tiling Editors</h3>
 The Workbench allows you to create two or more sets of editors in the editor
 area. You can also resize the editor area but you cannot drag views into the editor
 area or tear off editors from&nbsp; the Workbench window.</P>
-<TABLE BORDER="0" cellspacing="0" cellpadding="3">
-<THEAD>
-</THEAD>
-<TBODY>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-1.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+<ol>
+  <li>
 <P CLASS="Para">
 Open at least two editors in the editor area by double-clicking editable files in the Navigator view.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-2.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">
 Click and drag one of the editor's tabs out of the editor area. Do not release the mouse button.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-3.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">
 Notice that the restricted cursor displays if you attempt to drop the editor either on top of any view or outside the Workbench window.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-4.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">
 Still holding down the mouse button, drag the editor over the editor area and move the cursor along all four edges as well as in the middle of the editor area, on top of another open editor. Notice that along the edges of the editor
 area the directional arrow drop cursors appear, and in the middle of the editor
 area the stack drop cursor appears.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-5.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">
 Dock the editor on a directional arrow drop cursor so that two editors appear in the editor area.&nbsp;</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<p CLASS="Para">
-<b>6.</b>
-</p>
-</TD>
-<TD valign="top" align="left">
- <p CLASS="Para">
- Notice that you can also resize each editor as well as the entire editor area to
- accommodate the editors and views as necessary.&nbsp;</p>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<p CLASS="Para">
-<b>7.</b>
-</p>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
+<P CLASS="Para">
+Notice that you can also resize each editor as well as the entire editor area to 
+accommodate the editors and views as necessary.</P>
+  </li>
+  <li>
 <p CLASS="Para">
 It is important to observe the color of an editor tab (in the figure below there
 are two groups, one above the other)
@@ -106,40 +50,31 @@ are two groups, one above the other)
 <p CLASS="Para"><b>white</b> - indicates that the editor was the last
 active editor. If there is an active view, it will be the editor that the active view is currently working with.
 This is important when working with views like the Outline and Properties that
-work closely with the editor.
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>8.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+work closely with the editor.</li>
+  <li>
 <P CLASS="Para">
 Drag and dock the editor somewhere else in the editor area, noting the behavior that results from docking on each kind of drop cursor. Continue to experiment with docking and resizing editors and views until you have arranged the Workbench to your satisfaction.
 The figure below illustrates the layout if you drag and drop one editor below
 another.</P>
-</TD>
-</TR>
-</TBODY>
-</TABLE>
-<P>&nbsp;<img align="texttop" border="0" src="../images/Image57_two_editors.jpg" alt="Two editors"><br>
+  </li>
+</ol>
+<P>&nbsp;<img align="texttop" border="0" src="../images/Image57_two_editors.jpg" alt="Two editors" width="642" height="502"><br>
 </P>
 
 
 <P><a href="qs-39f.htm">
-<img border="0" src="../images/ngnext.gif" alt="Next topic" > 
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12" > 
 Rearranging tabbed views</a></P>
 
 
 <P><a href="qs-39d.htm">
-<img border="0" src="../images/ngback.gif" alt="Back to previous topic" > 
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12" > 
 Rearranging views</a></P>
 
 
 <P>
-<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
+<a href="../hglegal2002.htm">
+<img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
 
