--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-07b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-07b.htm
@@ -13,65 +13,31 @@ Using the file menu</h3>
 <P CLASS="Para">
 You can create new resources by using the File &gt; New menu on the Workbench menubar.
 Start by creating a simple project as follows:</P>
-<TABLE BORDER="0" cellspacing="0" cellpadding="3">
-<THEAD>
-</THEAD>
-<TBODY>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-1.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+<ol>
+  <li>
 <P CLASS="Para">
 From the menubar, select File &gt; New &gt; Project...</P>
 <P CLASS="Para">
 <img align="texttop" border="0" src="../images/Image11_new_wizard.jpg" alt="New Project Wizard" width="500" height="500"></P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-2.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">
 In the left pane&nbsp; select <i>Simple</i>, and on the right, select Project; then click Next.&nbsp;</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-3.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">
 In the <i> Project name </i> field, type your name as the name of your new project. Do not use spaces or special characters in the project name (e.g., &quot;JaneQuser&quot;).</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-4.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">
 Leave the box checked to use the default location for your new project. Click
 Finish when you are done.</P>
 <P CLASS="Para">
 <img align="texttop" border="0" src="../images/Image12_new_project_wizard.jpg" alt="New Project Wizard" width="500" height="499"></P>
-</TD>
-</TR>
-</TBODY>
-</TABLE>
+<P CLASS="Para">
+&nbsp;</P>
+  </li>
+</ol>
 <P>If you sneak a peak at the Navigator view, you will see that it now contains
 the simple project we just created.&nbsp;
 </P>
