--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-35.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-35.htm
@@ -15,35 +15,17 @@ rename several of our trusty files that we have created.&nbsp;</P>
 <P CLASS="Para">Before we start copying our files we need to do a little
 setup:</P>
 <p CLASS="Head"><b><a name="Setup">Setup</a></b></p>
-<table BORDER="0" cellspacing="0" cellpadding="3">
-  <thead>
-  </thead>
-  <tbody>
-    <tr>
-      <td valign="top" align="left">
-        <p CLASS="Para"><b>1.</b></p>
-      </td>
-      <td valign="top" align="left">
-        <p CLASS="Para">In the Navigator view, delete the file JanesWordDoc.doc.</p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" align="left">
-        <p CLASS="Para"><b>2.</b></p>
-      </td>
-      <td valign="top" align="left"><P CLASS="Para">You
-        navigator should be as follows:</P>
+<ol>
+  <li>
+<p CLASS="Head">In the Navigator view, delete the file JanesWordDoc.doc. Your Navigator should 
+look like this:</p>
         <blockquote>
-        <P CLASS="Para"><img align="texttop" border="0" src="../images/Image44_confirm_state.jpg" alt="Navigator view" >
-        .&nbsp;&nbsp;</P>
+        <P CLASS="Para">
+        <img align="texttop" border="0" src="../images/Image44_confirm_state.jpg" alt="Navigator view" width="219" height="215" ></P>
         </blockquote>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" align="left">
-        <p CLASS="Para"><b>3.</b></p>
-      </td>
-      <td valign="top" align="left"><P CLASS="Para">Double
+<p CLASS="Head">&nbsp;</p>
+  </li>
+  <li><P CLASS="Para">Double
         click on JanesFile.txt and ensure that it contains the following text.</P>
         <blockquote>
           <P><i>This is a sample text file<br>
@@ -52,37 +34,23 @@ setup:</P>
           than it has five lines of<br>
           text that are rather dull.</i></P>
         </blockquote>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" align="left">
-        <p CLASS="Para"><b>4.</b></p>
-      </td>
-      <td valign="top" align="left">
-        <p CLASS="Para">Close the editor on JanesFile.txt</p>
-      </td>
-    </tr>
-    <tr>
-      <td valign="top" align="left">
-        <p CLASS="Para">
-        <b>5.</b>
-        </p>
-      </td>
-      <td valign="top" align="left">
+      </li>
+  <li>
+<p CLASS="Head">Close the editor on JanesFile.txt.</p>
+  </li>
+  <li>
         <p CLASS="Para">
         Select the project JaneQuser. Using the project's popup menu create a folder named
         JanesOtherFolder.&nbsp;
         <blockquote>
           <p CLASS="Para"><img align="texttop" border="0" src="../images/Image45_setup.jpg" alt="Navigator view" width="218" height="215" ></p>
         </blockquote>
-      </td>
-    </tr>
-  </tbody>
-</table>
-<p>&nbsp;&nbsp;<P><a href="qs-35b.htm">
-<img border="0" src="../images/ngnext.gif" alt="Next topic" > 
+      </li>
+</ol>
+<P><a href="qs-35b.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12" > 
 Copying</a><p><a href="qs-34d.htm">
-<img border="0" src="../images/ngback.gif" alt="Back to previous topic" > 
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12" > 
 Editing files outside the Workbench</a><br>
 <P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14" ></a>
 
