--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-36b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-36b.htm
@@ -13,23 +13,15 @@
 Search view is visible. The
 title of the Search view shows that 4 matches were found.&nbsp;</p>
 <blockquote>
-  <p CLASS="Head"><img align="texttop" border="0" src="../images/Image51_search_view.jpg" alt="Search view" >&nbsp;&nbsp;</p>
+  <p CLASS="Head">
+  <img align="texttop" border="0" src="../images/Image51_search_view.jpg" alt="Search view" width="420" height="152" >&nbsp;&nbsp;</p>
 </blockquote>
 <p CLASS="Head"> Within the
 Search view two files are shown and we can further see that within each file
 there were 2 matches found.&nbsp; Let's take a more detailed look at the Search
 view.&nbsp;</p>
-<TABLE BORDER="0" cellspacing="0" cellpadding="3">
-<THEAD>
-</THEAD>
-<TBODY>
-<TR>
-<TD valign="top" align="left">
-<p CLASS="Para">
-<b>1.</b>
-</p>
-</TD>
-<TD valign="top" align="left">
+<ol>
+  <li>
 <p CLASS="Para">
 The title of the search view
 provides us with a description of the
@@ -39,15 +31,8 @@ provides the full description.&nbsp;
 <blockquote>
   <p CLASS="Para"><img align="texttop" border="0" src="../images/Image51_search_hover.jpg" alt="Search view" width="325" height="193"></p>
 </blockquote>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>2.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">
 Click the Show Next Match button <img align="texttop" border="0" src="../images/Image51_search_next.jpg"  alt="Show next match button" width="23" height="18" >
 to navigate to the first match of the search expression (&quot;it&quot;).&nbsp;</P>
@@ -56,15 +41,8 @@ to navigate to the first match of the search expression (&quot;it&quot;).&nbsp;<
 editor area.</P>
 <P CLASS="Para">Click Show Next Match button two more times. Once again the
 Search view automatically opens the file.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<p CLASS="Para">
-<b>3.</b>
-</p>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <p CLASS="Para">
 It is sometimes useful to remove uninteresting matches from the search results. The Search view's popup menu
 provides two ways to remove matches:
@@ -76,95 +54,49 @@ provides two ways to remove matches:
   <li>
     <p CLASS="Para">Remove Selected Match - Removes the file entry and all matches in it. </li>
 </ul>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<p CLASS="Para">
-<b>4.</b>
-</p>
-</TD>
-<TD valign="top" align="left">
-<p CLASS="Para">
-Choose Remove Current Match from the popup. Notice how JanesFile.txt only has one match
+  </li>
+  <li>
+<p CLASS="Head"> Choose Remove Current Match from the popup. Notice how JanesFile.txt only has one match
 left.</p>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<p CLASS="Para">
-<b>5.</b>
-</p>
-</TD>
-<TD valign="top" align="left">
-<p CLASS="Para">
-Select&nbsp;JanesText.txt in the Search view.</p>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<p CLASS="Para">
-<b>6.</b>
-</p>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
+<p CLASS="Head"> Select&nbsp;JanesText.txt in the Search view.</p>
+  </li>
+  <li>
 <p CLASS="Para">
 Choose Remove Selected Match from the popup menu. 
 <p CLASS="Para">The Search view now shows only one match for JanesFile.txt</p>
 <blockquote>
   <p CLASS="Para"><img align="texttop" border="0" src="../images/Image51_search_reduced.jpg" alt="Search view" width="425" height="150" ></p>
 </blockquote>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<p CLASS="Para">
-<b>7.</b>
-</p>
-</TD>
-<TD valign="top" align="left">
-<p CLASS="Para">
-Perform a second search for &quot;that&quot; by clicking on the Search button <img align="texttop" border="0" src="../images/Image50_search.jpg"  alt="Search button" >
+  </li>
+  <li>
+<p CLASS="Head"> Perform a second search for &quot;that&quot; by clicking on the Search button 
+<img align="texttop" border="0" src="../images/Image50_search.jpg"  alt="Search button" width="20" height="19" >
  in the Workbench's toolbar.</p>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<p CLASS="Para">
-<b>8.</b>
-</p>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <p CLASS="Para">
 The Search view updates to show the results of the new search. 
 <p CLASS="Para">You can move back and forth between your two search results using the drop
 down button on the Search views toolbar. </p>
 <blockquote>
-  <p CLASS="Para"><img align="texttop" border="0" src="../images/Image51_search_switching.jpg" alt="Search view"></p>
+  <p CLASS="Para">
+  <img align="texttop" border="0" src="../images/Image51_search_switching.jpg" alt="Search view" width="597" height="152"></p>
 </blockquote>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<p CLASS="Para">
-<b>9.</b>
-</p>
-</TD>
-<TD valign="top" align="left">
-<p CLASS="Para">
-In the drop down button choose &quot;it&quot; - 1 Occurrence. The Search view
+  </li>
+  <li>
+<p CLASS="Head"> In the drop down button choose &quot;it&quot; - 1 Occurrence. The Search view
 switches back to show you the original search. On the context menu choose Search
 Again to repeat the initial search. Notice that once again we have 4 matches.</p>
-</TD>
-</TR>
-</TBODY>
-</TABLE>
+  </li>
+</ol>
 
 
 <P><a href="qs-37-2b.htm">
 <img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
 Tasks and markers</a><p><a href="qs-36a.htm">
-<img border="0" src="../images/ngback.gif" alt="Back to previous topic" > 
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12" > 
 Starting a search</a><br>
 <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14" ></a>
 </p>
