--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-3e.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-3e.htm
@@ -13,45 +13,21 @@ Using bookmarks</h3>
 <p CLASS="Head">
 Now that we have our bookmarks we will see how to get to the files associated
 with the bookmarks.</p>
-<TABLE BORDER="0" cellspacing="0" cellpadding="3">
-<THEAD>
-</THEAD>
-<TBODY>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-1.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+<ol>
+  <li>
 <P CLASS="Para">
 Close all of the files in the editor area.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<p CLASS="Para"><b>2</b>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">
 In the Bookmarks view, double-click on the first bookmark we created (My
 Bookmark).</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>3.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">
 Notice that a file editor opens displaying the file with which the bookmark is associated and that the line associated with the bookmark is highlighted.</P>
-</TD>
-</TR>
-</TBODY>
-</TABLE>
+  </li>
+</ol>
 <p CLASS="Head">
 The Bookmarks view
 supports two additional ways to open the file associated with a selected bookmark:</p>
@@ -66,42 +42,16 @@ Navigator.&nbsp;&nbsp;
 </P>
 
 
-<TABLE BORDER="0" cellspacing="0" cellpadding="3">
-<THEAD>
-</THEAD>
-<TBODY>
-<TR>
-<TD valign="top" align="left">
-<p CLASS="Para"><b>1</b>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
-In the Bookmarks view, select My Bookmark.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<b>2.</b>
-</TD>
-<TD valign="top" align="left">
-From the bookmark's context menu choose Show In Navigator.
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>3.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+<ol>
+  <li>In the Bookmarks view, select My Bookmark.</li>
+  <li>From the bookmark's context menu choose Show In Navigator. </li>
+  <li>
 <P CLASS="Para">
 Notice that the Navigator view is now visible and the file JanesFile.txt is
 automatically selected for us. JanesFile.txt is the file My Bookmark was
 associated with.</P>
-</TD>
-</TR>
-</TBODY>
-</TABLE>
+  </li>
+</ol>
 
 
 <P><a href="qs-37-3f.htm">
