--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39d.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39d.htm
@@ -13,76 +13,33 @@ Rearranging Views</h3>
 <p CLASS="Head">
 We can change the position of our Navigator view in the Workbench
 window.</p>
-<TABLE BORDER="0" cellspacing="0" cellpadding="3">
-<THEAD>
-</THEAD>
-<TBODY>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-1.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">Click in the title bar of the Navigator view and drag the view
-across the Workbench window. Do not release the mouse button yet.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-2.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
+<ol>
+  <li>
+<p CLASS="Head">
+Click in the title bar of the Navigator view and drag the view
+across the Workbench window. Do not release the mouse button yet.</p>
+  </li>
+  <li>
+<p CLASS="Head">
 While still dragging the view around on top of the Workbench window, note that various drop cursors appear. These drop cursors
-(see previous section) indicate where the view will dock in relation to the view or editor area underneath the cursor when you release your mouse button. </P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-3.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+(see previous section) indicate where the view will dock in relation to the view or editor area underneath the cursor when you release your mouse button. </p>
+  </li>
+  <li>
 <P CLASS="Para">
 Dock the view in any position in the Workbench window, and view the results of this action. </P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-4.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">
 Click and drag the view's title bar to re-dock the view in another position in the Workbench window.
 Observe the results of this action. </P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-5.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
+  </li>
+  <li>
 <P CLASS="Para">
 Finally, drag the Navigator view over the Outline view. You will see a
 stack cursor. If you release the mouse button the Navigator will be stacked with
 the Outline view into a tabbed notebook.&nbsp;&nbsp; </P>
-</TD>
-</TR>
-</TBODY>
-</TABLE>
+  </li>
+</ol>
 <P><a href="qs-39e.htm">
 <img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
 Tiling editors</a></P>
